サイトツアーの流れを作成

--- a/pages/com.html
+++ b/pages/com.html
@@ -39,6 +39,7 @@
 		</div>
 	</div><br>
 	<!--記事-->
+	<center>
 	<div class="pagebox">
 		未記入
 		<hr noshade width="70%">
@@ -46,9 +47,10 @@
 			次のページ
 		</center>
 		<center>
-			<a class="nextpage" href="badsite.html">個人情報を守ろう！</a>
+			<a class="nextpage" href="iot.html">IoTにもセキュリティ？</a>
 		</center><br>
 	</div>
+	</center>
 	<!-- サイト構成 -->
 	<div class="sitekousei">
 		<br>
