--- a/pages/cyo.html
+++ b/pages/cyo.html
@@ -137,7 +137,7 @@
 				次のページ
 			</center>
 			<center>
-				<a class="nextpage" href="priv.html">個人情報を守ろう！</a>
+				<a class="nextpage" href="quiz.html">クイズ！</a>
 			</center><br>
 			
 		</div>
