--- a/pages/pc.html
+++ b/pages/pc.html
@@ -39,6 +39,7 @@
 		</div>
 	</div><br>
 	<!--記事-->
+	<center>
 	<div class="pagebox">
 		未記入
 		<hr noshade width="70%">
@@ -49,6 +50,7 @@
 			<a class="nextpage" href="badsite.html">個人情報を守ろう！</a>
 		</center><br>
 	</div>
+	</center>
 	<!-- サイト構成 -->
 	<div class="sitekousei">
 		<br>
