--- a/pages/tour.html
+++ b/pages/tour.html
@@ -40,18 +40,21 @@
 	</div><br>
 	<!--記事-->
 	<center>
-	<div class="pagebox">
-		<a>『インターネットに潜む危険』へようこそ！</a><br>
-		<a>このサイトではインターネットの恐ろしさを知ることができます！</a><br>
-		<a>このサイトを見ればあなたはセキュリティ博士です！！</a><br>
-		<a>それではツアーを始めましょう！</a><br>
+	<div>
+		<div class="welcome">
+			<br><br><br><br><br><br>
+			<b style="font-size: 75px">『<font color="red">インターネットに潜む危険</font>』</b><a style="font-size: 20px;color: black">へようこそ!</a><br><br><br><br><br><br>
+			<a>このサイトではインターネットの恐ろしさを知ることができます！!</a><br>
+			<a>このサイトを見ればあなたはセキュリティ博士です！</a><br><br><br><br>
+			<b style="font-size: 35px;color: black">それではツアーを始めましょう！</b><br><br><br><br>
+		</div>
 		<hr noshade width="70%">
 		<center>
 			最初のページ
 		</center>
 		<center>
 			<a class="nextpage" href="pc.html">自分のパソコンを守ろう！</a>
-		</center><br>
+		</center><br><br><br><br>
 		
 	</div>
 	</center>
