--- a/index.html
+++ b/index.html
@@ -52,25 +52,25 @@
 			<div class="box" id="box1">
 				<img class="boximg" src="img/pc.png" width="100%">
 				<div id="hover1">
-					<p>パソコン</p>自分のパソコンを守ろう！
+					<p>パソコン</p><p1>自分のパソコンを守ろう！</p1>
 				</div>
 			</div></a> <a href="pages/priv.html">
 			<div class="box" id="box2">
 				<img class="boximg" src="img/folder.png" width="100%">
 				<div id="hover2">
-					<p>個人情報</p>個人情報を守ろう！
+					<p>個人情報</p><p1>個人情報を守ろう！</p1>
 				</div>
 			</div></a> <a href="pages/badsite.html">
 			<div class="box" id="box3">
 				<img class="boximg" src="img/web.png" width="100%">
 				<div id="hover3">
-					<p>悪質サイト</p>悪質サイトに気をつけよう！
+					<p>悪質サイト</p><p1>悪質サイトに気をつけよう！</p1>
 				</div>
 			</div></a> <a href="pages/sns.html">
 			<div class="box" id="box4">
 				<img class="boximg" src="img/sns.png" width="100%">
 				<div id="hover4">
-					<p>SNS</p>SNSを正しく使おう！
+					<p>SNS</p><p1>SNSを正しく使おう！</p1>
 				</div>
 			</div></a>
 		</div>
@@ -81,25 +81,25 @@
 			<div class="box" id="box5">
 				<img class="boximg" src="img/office.png" width="100%">
 				<div id="hover5">
-					<p>会社の情報</p>会社の情報を守ろう！
+					<p>会社の情報</p><p1>会社の情報を守ろう！</p1>
 				</div>
 			</div></a> <a href="pages/iot.html">
 			<div class="box" id="box6">
 				<img class="boximg" src="img/iot.png" width="100%">
 				<div id="hover6">
-					<p>IoT</p>IoTにもセキュリティ？
+					<p>IoT</p><p1>IoTにもセキュリティ？</p1>
 				</div>
 			</div></a> <a href="pages/cyo.html">
 			<div class="box" id="box7">
 				<img class="boximg" src="img/camera.png" width="100%">
 				<div id="hover7">
-					<p>著作権</p>著作権を学ぼう！
+					<p>著作権</p><p1>著作権を学ぼう！</p1>
 				</div>
 			</div></a> <a href="pages/quiz.html">
 			<div class="box" id="box8">
 				<img class="boximg" src="img/quiz.png" width="100%">
 				<div id="hover8">
-					<p>クイズ！</p>知識を確かめよう！
+					<p>クイズ！</p><p1>知識を確かめよう！</p1>
 				</div>
 			</div></a>
 		</div>
