文字記号をpxからvwへ変更

--- a/pages/badsite.html
+++ b/pages/badsite.html
@@ -85,7 +85,7 @@
 					</div><br>
 					フィッシングサイトと言うのは、銀行のウェブサイトなどの個人情報を入力するページになりすまし、ユーザーを騙すことによってユーザーのクレジットカード番号や電話番号等の個人情報を盗み取ろうというサイトです。
 					<div class="pro">
-						<span style="border-bottom: solid 1px black"><a style="color: #FF5050;font-size:35px;">■</a> 対策　</span>
+						<span style="border-bottom: solid 1px black"><a style="color: #FF5050;font-size:2.43vw;">■</a> 対策　</span>
 					</div>
 					<center>
 						<div class="pagearticlebox2">
@@ -106,7 +106,7 @@
 					</div><br>
 					何の前触れもなく、つまり「ワンクリック」で、ユーザーが入会や購入の操作をしてしまったかのように見せかけ、高額な金額を提示し支払いを迫るサイトです。また、ユーザーの不安を煽るため支払いの期限を表示したり、ユーザーのコンピューターの情報を表示したりします。また、キャンセルのために電話をかけさせようとします。
 					<div class="pro">
-						<span style="border-bottom: solid 1px black"><a style="color: #FF5050;font-size:35px;">■</a> 対策　</span>
+						<span style="border-bottom: solid 1px black"><a style="color: #FF5050;font-size:2.43vw;">■</a> 対策　</span>
 					</div>
 					<center>
 						<div class="pagearticlebox2">
@@ -119,7 +119,7 @@
 					</div><br>
 					急に、ウイルスに感染しているかのような表示を出し、偽のアンチウイルスソフトをダウンロードするように促すサイトです。
 					<div class="pro">
-						<span style="border-bottom: solid 1px black"><a style="color: #FF5050;font-size:35px;">■</a> 対策　</span>
+						<span style="border-bottom: solid 1px black"><a style="color: #FF5050;font-size:2.43vw;">■</a> 対策　</span>
 					</div>
 					<center>
 						<div class="pagearticlebox2">
@@ -132,7 +132,7 @@
 					</div><br>
 					他のサイトをコピーした偽のサイトが作られたり、企業のサーバーが不正にアクセスされて外部の人に操作されることがあります。また、これらのサイトにはウイルスが仕掛けられる事があります。
 					<div class="pro">
-						<span style="border-bottom: solid 1px black"><a style="color: #FF5050;font-size:35px;">■</a> 対策　</span>
+						<span style="border-bottom: solid 1px black"><a style="color: #FF5050;font-size:2.43vw;">■</a> 対策　</span>
 					</div>
 					<center>
 						<div class="pagearticlebox2">
