--- a/pages/cyo.html
+++ b/pages/cyo.html
@@ -88,7 +88,7 @@
 					</div><br>
 					中高生の著作権に関わる大きな問題の一つが、違法ダウンロードです。違法ダウンロードとは、ネット上に違法にアップロードされた動画や音楽などを許可なくダウンロードすることで、犯罪になります。誰でも簡単にできるようなことですが、犯罪なので絶対にしないようにしましょう。
 					<div class="pro">
-						<span style="border-bottom: solid 1px black"><a style="color: #FF5050;font-size:35px;">■</a> 対策　</span>
+						<span style="border-bottom: solid 1px black"><a style="color: #FF5050;font-size:2.43vw;">■</a> 対策　</span>
 					</div>
 					<center>
 						<div class="pagearticlebox2">
@@ -101,7 +101,7 @@
 					</div><br>
 					未記入
 					<div class="pro">
-						<span style="border-bottom: solid 1px black"><a style="color: #FF5050;font-size:35px;">■</a> 対策　</span>
+						<span style="border-bottom: solid 1px black"><a style="color: #FF5050;font-size:2.43vw;">■</a> 対策　</span>
 					</div>
 					<center>
 						<div class="pagearticlebox2">
@@ -114,7 +114,7 @@
 					</div><br>
 					未記入
 					<div class="pro">
-						<span style="border-bottom: solid 1px black"><a style="color: #FF5050;font-size:35px;">■</a> 対策　</span>
+						<span style="border-bottom: solid 1px black"><a style="color: #FF5050;font-size:2.43vw;">■</a> 対策　</span>
 					</div>
 					<center>
 						<div class="pagearticlebox2">
@@ -131,7 +131,7 @@
 					未記入
 				</div>
 			</div>
-			
+
 			<hr noshade width="70%">
 			<center>
 				次のページ
@@ -139,7 +139,7 @@
 			<center>
 				<a class="nextpage" href="quiz.html">クイズ！</a>
 			</center><br>
-			
+
 		</div>
 	</center><!-- サイト構成 -->
 	<div class="sitekousei">
