--- a/pages/info.html
+++ b/pages/info.html
@@ -81,7 +81,7 @@
 		</div>
 	</div>
 	<center>
-		<table border="0" style="border-collapse: collapse; width:75%;">
+		<table border="0" style="border-collapse: collapse; width:75%;font-size:1.2vw;">
 			<thead>
 				<tr bgcolor="#00A2FF">
 					<th style="text-align:left;color:white;padding-top:10px;padding-bottom:10px;">
