--- a/pages/iot.html
+++ b/pages/iot.html
@@ -66,7 +66,7 @@
 					IoT機器に使われるOSへの<a style="color: red;">不正プログラムの脅威</a>もあり、今までもインターネット接続されたテレビが不正プログラムやランサムウェアに感染した例もあります。今後もこう言った被害が増えて行くでしょう。<br>
 					<br>
 					<div class="pro">
-						<span style="border-bottom: solid 1px black"><a style="color: #FF5050;font-size:35px;">■</a> 対策　</span>
+						<span style="border-bottom: solid 1px black"><a style="color: #FF5050;font-size:2.43vw;">■</a> 対策　</span>
 					</div>
 					<div class="pro2">
 						<a style="color: red;">パスワード</a>をかける
@@ -90,7 +90,7 @@
 					</div><br>
 					未記入
 					<div class="pro">
-						<span style="border-bottom: solid 1px black"><a style="color: #FF5050;font-size:35px;">■</a> 対策　</span>
+						<span style="border-bottom: solid 1px black"><a style="color: #FF5050;font-size:2.43vw;">■</a> 対策　</span>
 					</div>
 					<div class="pro2">
 						未記入
