--- a/pages/priv.html
+++ b/pages/priv.html
@@ -56,7 +56,7 @@
 					必ずそうなるとは限りませんが、そうならないという保証はありません。ですのでネットに個人情報が流出しないように気をつける必要があります。<br>
 					<br>
 					<div class="pro">
-						<span style="border-bottom: solid 1px black"><a style="color: #FF5050;font-size:35px;">■</a> 対策　</span>
+						<span style="border-bottom: solid 1px black"><a style="color: #FF5050;font-size:2.43vw;">■</a> 対策　</span>
 					</div>
 					<center>
 						<div class="pagearticlebox2">
@@ -76,7 +76,7 @@
 					フリーWi-Fiでユーザーが暗号化されていないWi-Fiスポットに接続して保護されていないウェブサイトを見た場合、攻撃者によってアカウント情報などが盗まれ、知らないうちにネット上で買い物をされてしまったり、ウェブサイトに登録している個人情報を閲覧する、SNS等に不正ログインしてアカウントを乗っ取り、悪質な広告を拡散させる、といった被害に繋がってしまいます。<br>
 					<br>
 					<div class="pro">
-						<span style="border-bottom: solid 1px black"><a style="color: #FF5050;font-size:35px;">■</a> 対策　</span>
+						<span style="border-bottom: solid 1px black"><a style="color: #FF5050;font-size:2.43vw;">■</a> 対策　</span>
 					</div>
 					<center>
 						<div class="pagearticlebox2">
