--- a/pages/tour.html
+++ b/pages/tour.html
@@ -43,10 +43,10 @@
 	<div>
 		<div class="welcome">
 			<br><br><br><br><br><br>
-			<b style="font-size: 75px">『<font color="red">インターネットに潜む危険</font>』</b><a style="font-size: 20px;color: black">へようこそ!</a><br><br><br><br><br><br>
+			<b style="font-size: 5.2vw">『<font color="red">インターネットに潜む危険</font>』</b><a style="font-size: 1.4vw;color: black">へようこそ!</a><br><br><br><br><br><br>
 			<a>このサイトではインターネットの恐ろしさを知ることができます！!</a><br>
 			<a>このサイトを見ればあなたはセキュリティ博士です！</a><br><br><br><br>
-			<b style="font-size: 35px;color: black">それではツアーを始めましょう！</b><br><br><br><br>
+			<b style="font-size: 2.45vw;color: black">それではツアーを始めましょう！</b><br><br><br><br>
 		</div>
 		<hr noshade width="70%">
 		<center>
@@ -55,7 +55,7 @@
 		<center>
 			<a class="nextpage" href="pc.html">自分のパソコンを守ろう！</a>
 		</center><br><br><br><br>
-		
+
 	</div>
 	</center>
 	<!-- topボタン -->
