--- a/pages/sns.html
+++ b/pages/sns.html
@@ -62,7 +62,7 @@
 					<br>
 					SNSでの投稿といった軽はずみの行動が自分だけではなく友達やその家族にまで <a style="color: red;">迷惑</a>をかける可能性があります。なので位置情報をつけるときには十分 <a style="color: red;">注意</a>してください。
 					<div class="pro">
-						<span style="border-bottom: solid 1px black"><a style="color: #FF5050;font-size:35px;">■</a> 対策　</span>
+						<span style="border-bottom: solid 1px black"><a style="color: #FF5050;font-size:2.43vw;">■</a> 対策　</span>
 					</div>
 					<div class="pro2">
 						写真自体の位置情報添付を <a style="color: red;">オフ</a>にする
@@ -86,7 +86,7 @@
 					</div><br>
 					SNSでも電子メールと同じように、詐欺などの <a style="color: red;">被害</a>が多くなってきています。例えば、Twitterのタイムラインで流れてきた広告のリンクをクリックしたら、 <a style="color: red;">高額な請求</a>や <a style="color: red;">迷惑メール</a>が送られてくるといった被害が出ています。
 					<div class="pro">
-						<span style="border-bottom: solid 1px black"><a style="color: #FF5050;font-size:35px;">■</a> 対策　</span>
+						<span style="border-bottom: solid 1px black"><a style="color: #FF5050;font-size:2.43vw;">■</a> 対策　</span>
 					</div>
 					<div class="pro2">
 						ブラウザの <a style="color: red;">フィルタリング</a>をオンにする
@@ -110,7 +110,7 @@
 					</div><br>
 					最近ネット上で嘘の情報が拡散され世間を困らせています。
 					<div class="pro">
-						<span style="border-bottom: solid 1px black"><a style="color: #FF5050;font-size:35px;">■</a> 対策　</span>
+						<span style="border-bottom: solid 1px black"><a style="color: #FF5050;font-size:2.43vw;">■</a> 対策　</span>
 					</div>
 					<div class="pro2">
 						情報リテラシーを身につける
@@ -135,7 +135,7 @@
 					<div class="pagearticlebox2">
 						未記入
 						<div class="pro">
-							<span style="border-bottom: solid 1px black"><a style="color: #FF5050;font-size:35px;">■</a> 対策　</span>
+							<span style="border-bottom: solid 1px black"><a style="color: #FF5050;font-size:2.43vw;">■</a> 対策　</span>
 						</div>
 						<div class="pro2">
 							未記入
