--- a/index.html
+++ b/index.html
@@ -23,13 +23,13 @@
 			<nav class="topnav">
 				<ul>
 					<li class="topbutton">
-						<a href="pages/whatis.html"><span style="border-bottom: solid 3px #ffffff;">Internet Securityとは</span></a>
+						<a href="pages/whatis.html"><span style="border-bottom: solid 0.2vw #ffffff;">Internet Securityとは</span></a>
 					</li>
 					<li class="topbutton">
-						<a href="pages/sitemap.html"><span style="border-bottom: solid 3px #ffffff;">サイトマップ</span></a>
+						<a href="pages/sitemap.html"><span style="border-bottom: solid 0.2vw #ffffff;">サイトマップ</span></a>
 					</li>
 					<li class="topbutton">
-						<a href="pages/info.html"><span style="border-bottom: solid 3px #ffffff;">サイト情報</span></a>
+						<a href="pages/info.html"><span style="border-bottom: solid 0.2vw #ffffff;">サイト情報</span></a>
 					</li>
 				</ul>
 			</nav>
