--- a/pages/sitemap.html
+++ b/pages/sitemap.html
@@ -25,13 +25,13 @@
 			<nav class="topnav">
 				<ul>
 					<li class="topbutton">
-						<a href="whatis.html"><span style="border-bottom: solid 3px #ffffff;">Internet Securityとは</span></a>
+						<a href="whatis.html"><span style="border-bottom: solid 0.2vw #ffffff;">Internet Securityとは</span></a>
 					</li>
 					<li class="topbutton">
-						<a href="#"><span style="border-bottom: solid 3px #ffffff;">サイトマップ</span></a>
+						<a href="#"><span style="border-bottom: solid 0.2vw #ffffff;">サイトマップ</span></a>
 					</li>
 					<li class="topbutton">
-						<a href="info.html"><span style="border-bottom: solid 3px #ffffff;">サイト情報</span></a>
+						<a href="info.html"><span style="border-bottom: solid 0.2vw #ffffff;">サイト情報</span></a>
 					</li>
 				</ul>
 			</nav>
